vzense-sys/vzense/include/Vzense_api_560.h

/**
* @brief 		Starts capturing the image stream indicated by <code>device</code>. \n
Invoke Ps2_StopStream() to stop capturing the image stream.
* @param[in] 	device			The handle of the device on which to start capturing the image stream.
* @param[in] 	sessionIndex	The index of the session that include N Tof sensors and maximum N RGB sensors. \n
								range from 0 to ::SessionCount - 1. See ::PsDeviceInfo for more information. \n
								For example, the camera <code>device</code> has 2 Tof sensor and 1 rgb sensor, the ::SessionCount is 2.\n
								If the <code>sessionIndex</code> is 0 mean that start 1 tof stream and the rgb stream, \n
								and if the <code>sessionIndex</code> is 1 mean that start only 1 tof stream.						
* @return 	    ::PsRetOK if	the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_StartStream(PsDeviceHandle device, uint32_t sessionIndex);
/**
* @brief 		Stops capturing the image stream on the device specified by <code>device</code>. that was started using Ps2_StartStream.
* @param[in] 	device			The handle of the device on which to stop capturing the image stream.
* @param[in] 	sessionIndex	The index of the session that include N Tof sensors and maximum N RGB sensors. \n
								range from 0 to ::SessionCount - 1. See ::PsDeviceInfo for more information. \n
								For example, the camera <code>device</code> has 2 Tof sensor and 1 rgb sensor, the ::SessionCount is 2.\n
								If the <code>sessionIndex</code> is 0 mean that stop 1 tof stream and the rgb stream, \n
								and if the <code>sessionIndex</code> is 1 mean that stop only 1 tof stream.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_StopStream(PsDeviceHandle device, uint32_t sessionIndex);
/**
* @brief 		Enables or disables mapping of the depth image to RGB space on the device. When enabled, PsGetFrame() can\n
*        		be invoked passing ::PsMappedRGBFrame as the frame type, to get the depth frame that is mapped to RGB space. The resolution of\n
*        		the mapped rgb frame is the same as that of the depth image.
* @param[in] 	device			The handle of the device on which to enable or disable mapping.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	bEnabled 		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetMapperEnabledDepthToRGB(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
/**
* @brief 		Returns the Boolean value of whether the mapping of the depth image to RGB space feature is enabled or disabled.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	bEnabled		Pointer to a variable in which to store the returned Boolean value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetMapperEnabledDepthToRGB(PsDeviceHandle device, uint32_t sessionIndex, bool *bEnabled);
/**
* @brief 		Enables or disables mapping of the RGB image to depth space on the device. When enabled, PsGetFrame()\n
can be invoked passing ::PsMappedDepthFrame as the frame type, to get the RGB frame that is mapped to depth space. The resolution\n
of the mapped depth frame is the same as that of the RGB image.
* @param[in] 	device			The handle of the device on which to enable or disable mapping.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	bEnabled 		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetMapperEnabledRGBToDepth(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
/**
* @brief 		Returns the Boolean value of whether the mapping of the RGB image to depth space feature is enabled or disabled.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	bEnabled		Pointer to a variable in which to store the returned Boolean value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetMapperEnabledRGBToDepth(PsDeviceHandle device, uint32_t sessionIndex, bool *bEnabled);
/**
* @brief 		Sets hotplug status callback function
* @param[in]	pCallback		Pointer to the callback function. See ::PtrHotPlugStatusCallback 
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetHotPlugStatusCallback(PtrHotPlugStatusCallback pCallback);
/**
* @brief 		Sets hotplug status callback function for c plus plus
* @param[in]	pCallback		Pointer to the callback function. See ::PtrHotPlugStatusCallback
* @param[in]	contex		    Pointer to the object of C++ class
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetHotPlugStatusCallback_(PtrHotPlugStatusCallback_ pCallback, void* contex);
/**
* @brief 		Returns the pulse count from the device specified by <code>device</code>.
* @param[in] 	device			The handle of the device on which to set the pulse count.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out] 	pwdrPulseCount	A pointer to a ::PsWDRPulseCount variable in which to store the PulseCount in WDR mode.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetWDRPulseCount(PsDeviceHandle device, uint32_t sessionIndex, PsWDRPulseCount* pwdrPulseCount);
/**
* @brief 		Sets the pulse count for the device specified by <code>device</code>.
* @param[in] 	device			The handle of the device on which to set the pulse count.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	pwdrPulseCount 	The PulseCount value in WDR mode to set.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetWDRPulseCount(PsDeviceHandle device, uint32_t sessionIndex, PsWDRPulseCount wdrpulseCount);
/**
* @brief 		Gets the serial number.
* @param[in] 	device			The handle of the device on which to set the pulse count.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	sn 				Pointer to a variable in which to store the returned sn value.
* @param[in] 	length 			The maximum length is 63 bytes.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetSerialNumber(PsDeviceHandle device, uint32_t sessionIndex, char* sn,int length);
/**
* @brief 		Gets the firmware version number.
* @param[in] 	device			The handle of the device on which to set the pulse count.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	fw 				Pointer to a variable in which to store the returned fw value.
* @param[in] 	length 			The maximum length is 63 bytes.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetFirmwareVersionNumber(PsDeviceHandle device, uint32_t sessionIndex, char* fw, int length);
/**
* @brief		Enables or disables the DSP feature for tof frame.
*				The DSP feature only support ComputeRealDepthCorrection and SpatialFilter.
*	            The default filter has ComputeRealDepthCorrection, SpatialFilter,TimeFilter, DepthDistortionCorrection and IrDistortionCorrection.
*				Enable the DSP feature can reduce SDK loading, but disable it has a better effect. 
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	bEnabled		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetDSPEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
/**
* @brief		Returns the Boolean value of whether the DSP feature is enabled or disabled.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	bEnabled		Pointer to a variable in which to store the returned Boolean value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetDSPEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool *bEnabled);
/*
* @brief		Enables or disables the SlaveMode feature
* @Parameters:
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	bEnabled		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @Return		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetSlaveModeEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
/**
* @brief 		Sets the tof frame rate.
* @param[in] 	device			The handle of the device on which to set the pulse count.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	value 		    The value of rate,in 3,5,6,10,15,30.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetTofFrameRate(PsDeviceHandle device, uint32_t sessionIndex, uint8_t value);
/**
* @brief 		Gets the tof frame rate.
* @param[in] 	device			The handle of the device on which to set the pulse count.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	value 		    The rate value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetTofFrameRate(PsDeviceHandle device, uint32_t sessionIndex, uint8_t* value);
/**
* @brief		Enables or disables the StandBy feature.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	bEnabled		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetStandByEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
/**
* @brief 		Opens the device specified by <code>alias</code>. The device must be subsequently closed using PsCloseDevice().
* @param[in] 	alias		the alias of the device. See ::PsDeviceInfo for more information.
* @param[out]	pDevices	the handle of the device on which to open.
* @return: 		::PsRetOK	if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_OpenDeviceByAlias(const char* alias, PsDeviceHandle* pDevice);