vzense-sys/bindings/dcam560.rs

unsafe extern "C" {
    #[doc = " @brief \t\tEnables or disables mapping of the depth image to RGB space on the device. When enabled, PsGetFrame() can\\n\n        \t\tbe invoked passing ::PsMappedRGBFrame as the frame type, to get the depth frame that is mapped to RGB space. The resolution of\\n\n        \t\tthe mapped rgb frame is the same as that of the depth image.\n @param[in] \tdevice\t\t\tThe handle of the device on which to enable or disable mapping.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in] \tbEnabled \t\tSet to <code>true</code> to enable the feature or <code>false</code> to disable the feature.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetMapperEnabledDepthToRGB(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tReturns the Boolean value of whether the mapping of the depth image to RGB space feature is enabled or disabled.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[out]\tbEnabled\t\tPointer to a variable in which to store the returned Boolean value.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetMapperEnabledDepthToRGB(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: *mut u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tEnables or disables mapping of the RGB image to depth space on the device. When enabled, PsGetFrame()\\n\ncan be invoked passing ::PsMappedDepthFrame as the frame type, to get the RGB frame that is mapped to depth space. The resolution\\n\nof the mapped depth frame is the same as that of the RGB image.\n @param[in] \tdevice\t\t\tThe handle of the device on which to enable or disable mapping.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in] \tbEnabled \t\tSet to <code>true</code> to enable the feature or <code>false</code> to disable the feature.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetMapperEnabledRGBToDepth(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tReturns the Boolean value of whether the mapping of the RGB image to depth space feature is enabled or disabled.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[out]\tbEnabled\t\tPointer to a variable in which to store the returned Boolean value.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetMapperEnabledRGBToDepth(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: *mut u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tSets hotplug status callback function\n @param[in]\tpCallback\t\tPointer to the callback function. See ::PtrHotPlugStatusCallback\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetHotPlugStatusCallback(pCallback: PtrHotPlugStatusCallback) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tSets hotplug status callback function for c plus plus\n @param[in]\tpCallback\t\tPointer to the callback function. See ::PtrHotPlugStatusCallback\n @param[in]\tcontex\t\t    Pointer to the object of C++ class\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetHotPlugStatusCallback_(
        pCallback: PtrHotPlugStatusCallback_,
        contex: *mut ::std::os::raw::c_void,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tReturns the pulse count from the device specified by <code>device</code>.\n @param[in] \tdevice\t\t\tThe handle of the device on which to set the pulse count.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[out] \tpwdrPulseCount\tA pointer to a ::PsWDRPulseCount variable in which to store the PulseCount in WDR mode.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetWDRPulseCount(
        device: PsDeviceHandle,
        sessionIndex: u32,
        pwdrPulseCount: *mut PsWDRPulseCount,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tSets the pulse count for the device specified by <code>device</code>.\n @param[in] \tdevice\t\t\tThe handle of the device on which to set the pulse count.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in] \tpwdrPulseCount \tThe PulseCount value in WDR mode to set.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetWDRPulseCount(
        device: PsDeviceHandle,
        sessionIndex: u32,
        wdrpulseCount: PsWDRPulseCount,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tGets the serial number.\n @param[in] \tdevice\t\t\tThe handle of the device on which to set the pulse count.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in] \tsn \t\t\t\tPointer to a variable in which to store the returned sn value.\n @param[in] \tlength \t\t\tThe maximum length is 63 bytes.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetSerialNumber(
        device: PsDeviceHandle,
        sessionIndex: u32,
        sn: *mut ::std::os::raw::c_char,
        length: ::std::os::raw::c_int,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tGets the firmware version number.\n @param[in] \tdevice\t\t\tThe handle of the device on which to set the pulse count.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in] \tfw \t\t\t\tPointer to a variable in which to store the returned fw value.\n @param[in] \tlength \t\t\tThe maximum length is 63 bytes.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetFirmwareVersionNumber(
        device: PsDeviceHandle,
        sessionIndex: u32,
        fw: *mut ::std::os::raw::c_char,
        length: ::std::os::raw::c_int,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief\t\tEnables or disables the DSP feature for tof frame.\n\t\t\t\tThe DSP feature only support ComputeRealDepthCorrection and SpatialFilter.\n\t            The default filter has ComputeRealDepthCorrection, SpatialFilter,TimeFilter, DepthDistortionCorrection and IrDistortionCorrection.\n\t\t\t\tEnable the DSP feature can reduce SDK loading, but disable it has a better effect.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in]\tbEnabled\t\tSet to <code>true</code> to enable the feature or <code>false</code> to disable the feature.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetDSPEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief\t\tReturns the Boolean value of whether the DSP feature is enabled or disabled.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[out]\tbEnabled\t\tPointer to a variable in which to store the returned Boolean value.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetDSPEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: *mut u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    pub fn Ps2_SetSlaveModeEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tSets the tof frame rate.\n @param[in] \tdevice\t\t\tThe handle of the device on which to set the pulse count.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in] \tvalue \t\t    The value of rate,in 3,5,6,10,15,30.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetTofFrameRate(
        device: PsDeviceHandle,
        sessionIndex: u32,
        value: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tGets the tof frame rate.\n @param[in] \tdevice\t\t\tThe handle of the device on which to set the pulse count.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in] \tvalue \t\t    The rate value.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetTofFrameRate(
        device: PsDeviceHandle,
        sessionIndex: u32,
        value: *mut u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief\t\tEnables or disables the StandBy feature.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in]\tbEnabled\t\tSet to <code>true</code> to enable the feature or <code>false</code> to disable the feature.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetStandByEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tOpens the device specified by <code>alias</code>. The device must be subsequently closed using PsCloseDevice().\n @param[in] \talias\t\tthe alias of the device. See ::PsDeviceInfo for more information.\n @param[out]\tpDevices\tthe handle of the device on which to open.\n @return: \t\t::PsRetOK\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_OpenDeviceByAlias(
        alias: *const ::std::os::raw::c_char,
        pDevice: *mut PsDeviceHandle,
    ) -> PsReturnStatus;
}
